Solved flex exercise 4. Changed a property because the desired outcome and solution didnt look quite right (align-content vs align-items)

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,26 @@ img {
   font-weight: 900;
 }
 
+.container {
+  display: flex;
+  gap: 52px;
+  align-content: center;
+  justify-content: center;
+  margin: 32px;
+}
+
+.plant {
+  width: 200px;
+}
+
+body {
+  text-align: center;
+}
+
+
+
+
+
 /* do not edit this footer */
 .footer {
   position: fixed;
